--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,7 +1,23 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h1>Elisa's Kitchen</h1>
+<div class="container h-100 mt-lg-5">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-3 text-light font-weight-bolder">
+                The recipes collection
+            </h1>
+            <div class="my-5">
+                <h4>
+                    <a href="#"
+                        class="discover-button btn btn-lg text-uppercase py-3">
+                        Discover
+                    </a>
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
 
 {% block postjs %}
