Integrated allauth forms in layout - Removed labels

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,3 +28,13 @@ body {
 .navbar .form-control {
   font-size: 1rem;
 }
+
+.white-overlay {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background: white;
+  z-index: -1;
+}
