--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -15,7 +15,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit" class="btn btn-sm btn-warning text-primary">{% trans "Sign Up" %} &raquo;</button>
+  <button type="submit" class="btn btn-sm btn-go text-primary ml-0">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
 {% endblock %}
