--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,12 +4,12 @@
 <div class="container h-100 mt-lg-5">
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-3 text-light font-weight-bolder">
+            <h1 class="display-3 text-dark font-weight-bolder">
                 The recipes collection
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="#"
+                    <a href="{% url 'recipes' %}"
                         class="discover-button btn btn-lg text-uppercase py-3">
                         Discover
                     </a>
