--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -41,7 +41,7 @@
                     >
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
-                        <a href="" class="dropdown-item">Product Management</a>
+                        <a href="{% url 'add_recipe' %}" class="dropdown-item">Product Management</a>
                         {% endif %}
                         <a href="" class="dropdown-item">My Profile</a>
                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
