--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,11 @@
         {% endblock meta %}
         {% block css %}
         <link rel="shortcut icon" href="{% static 'icons/favicon.ico' %}" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css"
+            rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         {% endblock css %}
 
@@ -41,7 +44,8 @@
             crossorigin="anonymous">
             </script>
         <!-- MDB core JavaScript -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/9464f43776.js"
             crossorigin="anonymous">
@@ -54,7 +58,7 @@
         </title>
     </head>
 
-    <body">
+    <body>
 
         <!--Header-->
         {% include 'includes/_navbar.html' %}
@@ -62,7 +66,25 @@
         <main>
             <!--Messages-->
             {% if messages %}
-            <div class="message-container"></div>
+            {% for message in messages %}
+
+            <div id="message" class="container">
+                <div class="alert alert-{{ message.tags }} alert-dismissable text-center"
+                    role="alert">
+                    <button class="close" type="button"
+                        data-dismiss="alert"><span
+                            aria-hidden="true">&times;</span></button>
+                    <strong>
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                        Error:
+                        {% else %}
+                        {{ message.tags|title}}
+                        {% endif %}
+                    </strong>
+                    {{ message }}
+                </div>
+            </div>
+            {% endfor %}
             {% endif %}
             <!--Extra Header-->
             {% block extra_header %}
