Added recipe template - Avatar for no user

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,13 +5,13 @@
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-3 text-dark font-weight-bolder">
-                The recipes collection
+                ELISA'S KITCHEN
             </h1>
             <div class="my-5">
                 <h4>
                     <a href="{% url 'recipes' %}"
                         class="discover-button btn btn-lg text-uppercase py-3">
-                        Discover
+                        Discover the recipes
                     </a>
                 </h4>
             </div>
