--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
+<div class="container mt-3 mb-5">
 <div class="white-overlay"></div>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
@@ -32,6 +32,7 @@
         </div>
     </div>
 </div>
+<div class="spacer"></div>
 {% endblock %}
 
 {% block postjs %}
