--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -4,15 +4,9 @@
         <a class="navbar-brand" href="{% url 'home'%}">Elisa</a>
 
         <!-- Collapse button -->
-        <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#basicExampleNav"
-            aria-controls="basicExampleNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#basicExampleNav" aria-controls="basicExampleNav"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -20,34 +14,33 @@
         <div class="collapse navbar-collapse" id="basicExampleNav">
             <!-- Links -->
             <ul class="navbar-nav mr-auto ml-lg-2">
-                <li class="nav-item dropdown">
-                    <a
-                        class="nav-link dropdown-toggle"
-                        id="navbarDropdownMenuLink-4"
-                        data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false"
-                    >
-                        <i class="fas fa-user"></i>
+                <li class="nav-item avatar dropdown">
+                    <a class="nav-link dropdown-toggle"
+                        id="navbarDropdownMenuLink-55" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         {% if request.user.is_authenticated %}
-                        {{ request.user.username }}
+                        <img src="{{ MEDIA_URL }}avatar.jpg"
+                            class="rounded-circle z-depth-0" alt="avatar image">
                         {% else %}
-                        Profile
+                        <img src="{{ MEDIA_URL }}nouser.jpg"
+                            class="rounded-circle z-depth-0" alt="avatar image">
                         {% endif %}
                     </a>
-                    <div
-                        class="dropdown-menu dropdown-menu-right dropdown-info"
-                        aria-labelledby="navbarDropdownMenuLink-4"
-                    >
+                    <div class="dropdown-menu dropdown-secondary"
+                        aria-labelledby="navbarDropdownMenuLink-55">
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
-                        <a href="{% url 'add_recipe' %}" class="dropdown-item">Add Recipe</a>
+                        <a href="{% url 'add_recipe' %}"
+                            class="dropdown-item">Add Recipe</a>
                         {% endif %}
                         <a href="" class="dropdown-item">My Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        <a href="{% url 'account_logout' %}"
+                            class="dropdown-item">Logout</a>
                         {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        <a href="{% url 'account_signup' %}"
+                            class="dropdown-item">Register</a>
+                        <a href="{% url 'account_login' %}"
+                            class="dropdown-item">Login</a>
                         {% endif %}
                     </div>
                 </li>
@@ -55,12 +48,8 @@
 
             <form class="form-inline">
                 <div class="md-form my-0">
-                    <input
-                        class="form-control mr-sm-2"
-                        type="text"
-                        placeholder="Search recipes"
-                        aria-label="Search"
-                    />
+                    <input class="form-control mr-sm-2" type="text"
+                        placeholder="Search recipes" aria-label="Search" />
                 </div>
             </form>
         </div>
