Alerts auto hide

--- a/recipes/templates/recipes/custom_widget_templates/custom_clearable_file_input.html
+++ b/recipes/templates/recipes/custom_widget_templates/custom_clearable_file_input.html
@@ -6,7 +6,7 @@
 </a>
 <br />
 {{ widget.input_text }} {% endif %}
-<span class="btn btn-go btn-file">
+<span class="btn btn-go btn-file ml-0 mt-3">
     Select Image<input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}" {% include 'django/forms/widgets/attrs.html' %}>
 </span>
 <strong>
