--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,12 @@
         {% block css %}
         <link rel="shortcut icon" href="{% static 'icons/favicon.ico' %}" />
         <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/materia/bootstrap.min.css">
-        {% comment %} <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css"
-            rel="stylesheet"> {% endcomment %}
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.3/materia/bootstrap.min.css"
+            integrity="sha512-kVanJHvya7pjfbFS86L3ZWMSE3ngbyjIJLvFDEdNWq/kXUAbCe6luNi/+fq+DGIDw/TaU1/yXTYTXTB7hEpQvQ=="
+            crossorigin="anonymous" />
         <link rel="stylesheet" href="{% static 'css/mdb.css' %}" />
-        <link rel="stylesheet" href="{% static 'css/cards-extended.min.css' %}" />
+        <link rel="stylesheet"
+            href="{% static 'css/cards-extended.min.css' %}" />
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         {% endblock css %}
 
@@ -68,9 +68,11 @@
             <!--Messages-->
             {% if messages %}
             {% for message in messages %}
-            <div id="message" class="container">
-                <div class="alert alert-{{ message.tags }} alert-dismissible text-center fade show" role="alert">
-                    <button class="close" type="button" data-dismiss="alert" aria-label="Close">
+            <div id="message" class="container mt-3">
+                <div class="alert alert-{{ message.tags }} alert-dismissible text-center fade show"
+                    role="alert">
+                    <button class="close" type="button" data-dismiss="alert"
+                        aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <strong>
