--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,7 @@
         {% block css %}
         <link rel="shortcut icon" href="{% static 'icons/favicon.ico' %}" />
         <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.3/materia/bootstrap.min.css"
-            integrity="sha512-kVanJHvya7pjfbFS86L3ZWMSE3ngbyjIJLvFDEdNWq/kXUAbCe6luNi/+fq+DGIDw/TaU1/yXTYTXTB7hEpQvQ=="
-            crossorigin="anonymous" />
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.3/materia/bootstrap.min.css" />
         <link rel="stylesheet" href="{% static 'css/mdb.css' %}" />
         <link rel="stylesheet"
             href="{% static 'css/cards-extended.min.css' %}" />
