--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -6,29 +6,23 @@
 <div class="container mt-5">
     <div class="row">
         {% for recipe in recipes %}
-
         <!-- Card -->
         <div class="col col-md-6 col-lg-4 col-xl-3 mb-3">
             <div class="card promoting-card mb-5">
                 <div class="card-body d-flex flex-row">
-                    <img src="{{ MEDIA_URL }}avatar.jpg"
-                        class="rounded-circle mr-3" height="50px" width="50px"
-                        alt="avatar">
+                    <img src="{{ MEDIA_URL }}avatar.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
                     <div>
                         <h4 class="card-title font-weight-bold mb-2">
                             {{ recipe.name }}</h4>
-                        <p class="card-text"><i
-                                class="far fa-clock pr-2"></i>{{ recipe.created|date:"dS M Y" }}
+                        <p class="card-text"><i class="far fa-clock pr-2"></i>{{ recipe.created|date:"dS M Y" }}
                         </p>
                     </div>
                 </div>
                 <div class="view overlay">
                     {% if recipe.image %}
-                    <img class="card-img-top rounded-0"
-                        src="{{ recipe.thumbnail.url }}" alt="Card image cap">
+                    <img class="card-img-top rounded-0" src="{{ recipe.thumbnail.url }}" alt="Card image cap">
                     {% else %}
-                    <img class="card-img-top rounded-0"
-                        src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
+                    <img class="card-img-top rounded-0" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     {% endif %}
                     <a href="{% url 'recipe_detail' recipe.id %}">
                         <div class="mask rgba-white-slight"></div>
@@ -36,26 +30,54 @@
                 </div>
                 <div class="card-body">
                     <div class="collapse-content">
-                        <p class="card-text collapse"
-                            id="collapseContent-{{ recipe.id }}">
+                        <p class="card-text collapse" id="collapseContent-{{ recipe.id }}">
                             {{ recipe.description|linebreaksbr }}</p>
-                        <a class="btn btn-flat red-text p-1 my-1 mr-0 mml-1 collapsed"
-                            data-toggle="collapse"
-                            href="#collapseContent-{{ recipe.id }}"
-                            aria-expanded="false"
-                            aria-controls="collapseContent"></a>
-                        <i class="fas fa-share-alt text-muted float-right p-1 my-1"
-                            data-toggle="tooltip" data-placement="top"
-                            title="Share this post"></i>
-                        <i class="fas fa-heart text-muted float-right p-1 my-1 mr-3"
-                            data-toggle="tooltip" data-placement="top"
-                            title="I like it"></i>
+                        <a class="btn btn-flat red-text p-1 my-1 mr-0 mml-1 collapsed" data-toggle="collapse" href="#collapseContent-{{ recipe.id }}" aria-expanded="false" aria-controls="collapseContent"></a>
+                        <i class="fas fa-share-alt text-muted float-right p-1 my-1" data-toggle="tooltip" data-placement="top" title="Share this post"></i>
+                        <i class="fas fa-heart text-muted float-right p-1 my-1 mr-3" data-toggle="tooltip" data-placement="top" title="I like it"></i>
                     </div>
                 </div>
             </div>
         </div>
-
         {% endfor %}
+    </div>
+    <!-- Pagination -->
+    <div class="row">
+        <div class="col">
+            {% if recipes.has_other_pages %}
+            <ul class="pagination justify-content-center">
+                {% if recipes.has_previous %}
+                <li class="page-item">
+                    <a href="?page={{ recipes.previous_page_number }}" class="page-link">&laquo;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">&laquo;</a>
+                </li>
+                {% endif %}
+                {% for i in recipes.paginator.page_range %}
+                {% if recipes.number == i %}
+                <li class="active page-item">
+                    <a class="page-link">{{ i }}</a>
+                </li>
+                {% else %}
+                <li class="page-item">
+                    <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+                {% if recipes.has_next %}
+                <li class="page-item">
+                    <a href="?page={{ recipes.next_page_number }}" class="page-link">&raquo;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">&raquo;</a>
+                </li>
+                {% endif %}
+            </ul>
+            {% endif %}
+        </div>
     </div>
 </div>
 
