--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -48,7 +48,7 @@
 
             <form class="form-inline">
                 <div class="md-form my-0">
-                    <input class="form-control mr-sm-2" type="text"
+                    <input class="form-control mr-sm-2 search-placeholder" type="text"
                         placeholder="Search recipes" aria-label="Search" />
                 </div>
             </form>
