--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -8,19 +8,47 @@
                 {{ recipe.name }}
             </h1>
             <div class="row">
-                <div class="col-4">
+
+
+                <div class="col-3">
+                    <p class="recipe-details">
+                    {% if recipe.difficulty == '1' %}
+                        <span><i class="fas fa-circle text-success"></i></span>
+                        Difficulty: <span>Easy</span>
+                    {% endif %}
+                    {% if recipe.difficulty == '2' %}
+                        <span><i class="fas fa-circle text-primary"></i></span>
+                        Difficulty: <span>Fair</span>
+                    {% endif %}
+                    {% if recipe.difficulty == '3' %}
+                        <span><i class="fas fa-circle text-secondary"></i></span>
+                        Difficulty: <span>Moderate</span>
+                    {% endif %}
+                    {% if recipe.difficulty == '4' %}
+                        <span><i class="fas fa-circle text-warning"></i></span>
+                        Difficulty: <span>Difficult</span>
+                    {% endif %}
+                    {% if recipe.difficulty == '5' %}
+                        <span><i class="fas fa-circle text-danger"></i></span>
+                        Difficulty: <span>Expert</span>
+                    {% endif %}
+                    </p>
+                </div>
+
+
+                <div class="col-3">
                     <p class="recipe-details">
                         <span><i class="fas fa-calendar-alt text-secondary"></i></span>
                         Created on {{ recipe.created|date:"dS M Y" }}
                     </p>
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <p class="recipe-details">
                         <span><i class="fas fa-dollar-sign text-secondary"></i></span>
                         Cost: €{{ recipe.price }}
                 </div>
                 </p>
-                <div class="col-4">
+                <div class="col-3">
                     <p class="recipe-details">
                         <span><i class="fas fa-clock text-secondary"></i></span>
                         Prep time: {{ recipe.time }} mins.
