--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block postcss %}
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'recipes/css/tagsinputs.css' %}">
+{% endblock postcss %}
 {% block content %}
 <div class="container mt-3 mb-5">
 <div class="white-overlay"></div>
@@ -38,4 +42,5 @@
 {% block postjs %}
 {{ block.super }}
 <script src="{% static 'recipes/js/scripts.js' %}" type="text/javascript"></script>
+<script src="{% static 'recipes/js/tagsinputs.js' %}" type="text/javascript"></script>
 {% endblock %}
