--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block postcss %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'recipes/css/tagsinputs.css' %}">
+<link rel="stylesheet" href="{% static 'recipes/css/tagsinput.css' %}">
 {% endblock postcss %}
 {% block content %}
 <div class="container mt-3 mb-5">
@@ -42,5 +42,5 @@
 {% block postjs %}
 {{ block.super }}
 <script src="{% static 'recipes/js/scripts.js' %}" type="text/javascript"></script>
-<script src="{% static 'recipes/js/tagsinputs.js' %}" type="text/javascript"></script>
+<script src="{% static 'recipes/js/tagsinput.js' %}" type="text/javascript"></script>
 {% endblock %}
