--- a/recipes/templates/recipes/edit_recipe.html
+++ b/recipes/templates/recipes/edit_recipe.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block postcss %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'recipes/css/tagsinputs.css' %}">
+<link rel="stylesheet" href="{% static 'recipes/css/tagsinput.css' %}">
 {% endblock postcss %}
 {% block content %}
 <div class="container mt-3 mb-5">
@@ -21,6 +21,7 @@
                 {% if field.name != 'image' %}
                 <!--Renders as crispy if field is not image-->
                 {{ field | as_crispy_field }}
+                {% elif field.tags %}
                 {% else %}
                 <!--Else renders it normally-->
                 {{ field }}
@@ -42,5 +43,5 @@
 {% block postjs %}
 {{ block.super }}
 <script src="{% static 'recipes/js/scripts.js' %}" type="text/javascript"></script>
-<script src="{% static 'recipes/js/tagsinputs.js' %}" type="text/javascript"></script>
+<script src="{% static 'recipes/js/tagsinput.js' %}" type="text/javascript"></script>
 {% endblock %}
