--- a/static/css/main.css
+++ b/static/css/main.css
@@ -177,3 +177,7 @@ body {
 .allauth-form-inner-content label:not([for='id_remember']) {
   display: none;
 }
+
+label[for=id_image] {
+  display: none;
+}
