Refined Q to query for foreign key

--- a/recipes/templates/recipes/includes/modal_delete.html
+++ b/recipes/templates/recipes/includes/modal_delete.html
@@ -1,7 +1,7 @@
 <!-- Modal Delete -->
 <div class="modal fade top" id="deleteRecipeModal" tabindex="-1" role="dialog"
     aria-labelledby="deleteRecipeModal" aria-hidden="true">
-    <div class="modal-dialog modal-frame modal-top" role="document">
+    <div class="modal-dialog modal-frame modal-top m-0" role="document">
         <div class="modal-content">
             <div class="modal-body bg-warning">
                 <div
